Deploy preview for PR 18 🛫

--- a/pr-preview/pr-18/datasets.html
+++ b/pr-preview/pr-18/datasets.html
@@ -738,7 +738,7 @@ Use `schema()` to see entire schema</code></pre>
 <p>The table below shows how many files in each dataset, as well as the minimum, maximum, and median file size.</p>
 <table class="caption-top table">
 <colgroup>
-<col style="width: 24%">
+<col style="width: 26%">
 <col style="width: 12%">
 <col style="width: 10%">
 <col style="width: 13%">
@@ -749,50 +749,50 @@ Use `schema()` to see entire schema</code></pre>
 <thead>
 <tr class="header">
 <th>Dataset</th>
-<th># of Files</th>
-<th>Min size</th>
-<th>1st Quartile</th>
-<th>Median size</th>
-<th>3rd Quartile</th>
-<th>Max size</th>
+<th style="text-align: right;"># of Files</th>
+<th style="text-align: right;">Min size</th>
+<th style="text-align: right;">1st Quartile</th>
+<th style="text-align: right;">Median size</th>
+<th style="text-align: right;">3rd Quartile</th>
+<th style="text-align: right;">Max size</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td>pums_one_big_file</td>
-<td>1</td>
-<td>7786.3 MB</td>
-<td>7786.3 MB</td>
-<td>7786.3 MB</td>
-<td>7786.3 MB</td>
-<td>7786.3 MB</td>
+<td style="text-align: right;">1</td>
+<td style="text-align: right;">7786.3 MB</td>
+<td style="text-align: right;">7786.3 MB</td>
+<td style="text-align: right;">7786.3 MB</td>
+<td style="text-align: right;">7786.3 MB</td>
+<td style="text-align: right;">7786.3 MB</td>
 </tr>
 <tr class="even">
 <td>pums_by_year</td>
-<td>34</td>
-<td>0.1MB</td>
-<td>0.1MB</td>
-<td>211.8MB</td>
-<td>459.9 MB</td>
-<td>493MB</td>
+<td style="text-align: right;">34</td>
+<td style="text-align: right;">0.1 MB</td>
+<td style="text-align: right;">0.1 MB</td>
+<td style="text-align: right;">211.8 MB</td>
+<td style="text-align: right;">459.9 MB</td>
+<td style="text-align: right;">493 MB</td>
 </tr>
 <tr class="odd">
 <td>pums_by_year_location</td>
-<td>1785</td>
-<td>0.1MB</td>
-<td>0.1MB</td>
-<td>0.1MB</td>
-<td>6.02MB</td>
-<td>56.1MB</td>
+<td style="text-align: right;">1785</td>
+<td style="text-align: right;">0.1 MB</td>
+<td style="text-align: right;">0.1 MB</td>
+<td style="text-align: right;">0.1 MB</td>
+<td style="text-align: right;">6.02 MB</td>
+<td style="text-align: right;">56.1 MB</td>
 </tr>
 <tr class="even">
 <td>pums_by_year_location_age</td>
-<td>14124</td>
-<td>0.1MB</td>
-<td>0.1MB</td>
-<td>0.4MB</td>
-<td>1.09MB</td>
-<td>17.6MB</td>
+<td style="text-align: right;">14124</td>
+<td style="text-align: right;">0.1 MB</td>
+<td style="text-align: right;">0.1 MB</td>
+<td style="text-align: right;">0.4 MB</td>
+<td style="text-align: right;">1.09 MB</td>
+<td style="text-align: right;">17.6 MB</td>
 </tr>
 </tbody>
 </table>
