Deploy preview for PR 15 🛫

--- a/pr-preview/pr-15/advanced_topics.html
+++ b/pr-preview/pr-15/advanced_topics.html
@@ -374,7 +374,7 @@ gtag('config', 'G-4JT42QR6DV', { 'anonymize_ip': true});
 <div class="cell-output-display">
 <div data-pagedtable="false">
   <script data-pagedtable-source="" type="application/json">
-{"columns":[{"label":["location"],"name":[1],"type":["chr"],"align":["left"]},{"label":["metric"],"name":[2],"type":["chr"],"align":["left"]},{"label":["value"],"name":[3],"type":["int"],"align":["right"]}],"data":[{"1":"al","2":"max_commute","3":"184"},{"1":"az","2":"max_commute","3":"184"},{"1":"ca","2":"max_commute","3":"142"},{"1":"wa","2":"max_commute","3":"152"},{"1":"wv","2":"max_commute","3":"193"},{"1":"wy","2":"max_commute","3":"176"},{"1":"ak","2":"max_commute","3":"194"},{"1":"ar","2":"max_commute","3":"186"},{"1":"wi","2":"max_commute","3":"177"},{"1":"ak","2":"min_commute","3":"1"},{"1":"al","2":"min_commute","3":"1"},{"1":"ca","2":"min_commute","3":"1"},{"1":"wa","2":"min_commute","3":"1"},{"1":"ar","2":"min_commute","3":"1"},{"1":"az","2":"min_commute","3":"1"},{"1":"wi","2":"min_commute","3":"1"},{"1":"wv","2":"min_commute","3":"1"},{"1":"wy","2":"min_commute","3":"1"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
+{"columns":[{"label":["location"],"name":[1],"type":["chr"],"align":["left"]},{"label":["metric"],"name":[2],"type":["chr"],"align":["left"]},{"label":["value"],"name":[3],"type":["int"],"align":["right"]}],"data":[{"1":"al","2":"max_commute","3":"184"},{"1":"ak","2":"max_commute","3":"194"},{"1":"az","2":"max_commute","3":"184"},{"1":"wa","2":"max_commute","3":"152"},{"1":"wi","2":"max_commute","3":"177"},{"1":"ca","2":"max_commute","3":"142"},{"1":"wy","2":"max_commute","3":"176"},{"1":"ar","2":"max_commute","3":"186"},{"1":"wv","2":"max_commute","3":"193"},{"1":"al","2":"min_commute","3":"1"},{"1":"az","2":"min_commute","3":"1"},{"1":"ca","2":"min_commute","3":"1"},{"1":"wa","2":"min_commute","3":"1"},{"1":"ak","2":"min_commute","3":"1"},{"1":"wi","2":"min_commute","3":"1"},{"1":"wy","2":"min_commute","3":"1"},{"1":"wv","2":"min_commute","3":"1"},{"1":"ar","2":"min_commute","3":"1"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
   </script>
 </div>
 </div>
@@ -410,7 +410,7 @@ gtag('config', 'G-4JT42QR6DV', { 'anonymize_ip': true});
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="advanced_topics_files/figure-html/projections-1.png" class="img-fluid figure-img" width="768"></p>
+<p><img src="advanced_topics_files/figure-html/projections-html-1.png" class="img-fluid figure-img" width="768"></p>
 </figure>
 </div>
 </div>
@@ -684,10 +684,12 @@ $creator$version
 <span id="cb17-23"><a href="#cb17-23" aria-hidden="true" tabindex="-1"></a>    <span class="at">title =</span> <span class="st">"Proportion of speakers by language"</span>,</span>
 <span id="cb17-24"><a href="#cb17-24" aria-hidden="true" tabindex="-1"></a>    <span class="at">subtitle =</span> <span class="st">"across the US by PUMA"</span></span>
 <span id="cb17-25"><a href="#cb17-25" aria-hidden="true" tabindex="-1"></a>  )</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
+</div>
+<div class="cell">
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="advanced_topics_files/figure-html/pums-langauge-all-US-1.png" class="img-fluid figure-img" width="768"></p>
+<p><img src="advanced_topics_files/figure-html/pums-langauge-all-US-plot-html-1.png" class="img-fluid figure-img" width="768"></p>
 </figure>
 </div>
 </div>
@@ -753,10 +755,12 @@ Tip
 <span id="cb23-24"><a href="#cb23-24" aria-hidden="true" tabindex="-1"></a>    <span class="at">title =</span> <span class="st">"Proportion of speakers by language"</span>,</span>
 <span id="cb23-25"><a href="#cb23-25" aria-hidden="true" tabindex="-1"></a>    <span class="at">subtitle =</span> <span class="st">"in the Chicago area by PUMA"</span></span>
 <span id="cb23-26"><a href="#cb23-26" aria-hidden="true" tabindex="-1"></a>  )</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
+</div>
+<div class="cell">
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="advanced_topics_files/figure-html/pums-langauge-chicagoland-1.png" class="img-fluid figure-img" width="768"></p>
+<p><img src="advanced_topics_files/figure-html/pums-langauge-chicagoland-plot-html-1.png" class="img-fluid figure-img" width="768"></p>
 </figure>
 </div>
 </div>
@@ -790,10 +794,12 @@ Tip
 <span id="cb24-25"><a href="#cb24-25" aria-hidden="true" tabindex="-1"></a>    <span class="at">title =</span> <span class="st">"Proportion of speakers by language"</span>,</span>
 <span id="cb24-26"><a href="#cb24-26" aria-hidden="true" tabindex="-1"></a>    <span class="at">subtitle =</span> <span class="st">"in the Northeast"</span></span>
 <span id="cb24-27"><a href="#cb24-27" aria-hidden="true" tabindex="-1"></a>  )</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
+</div>
+<div class="cell">
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="advanced_topics_files/figure-html/pums-langauge-northeast-1.png" class="img-fluid figure-img" width="768"></p>
+<p><img src="advanced_topics_files/figure-html/pums-langauge-northeast-plot-html-1.png" class="img-fluid figure-img" width="768"></p>
 </figure>
 </div>
 </div>
