--- a/pr-preview/pr-20/intro.html
+++ b/pr-preview/pr-20/intro.html
@@ -161,7 +161,7 @@ gtag('config', 'G-4JT42QR6DV', { 'anonymize_ip': true});
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./index.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">Welcome</span></a>
+ <span class="menu-text">Acknowledgements</span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -368,8 +368,8 @@ arrow vs Arrow
 <section id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes">
 <hr>
 <ol>
-<li id="fn1"><p>Wes McKinney describes the rationale well <a href="https://wesmckinney.com/blog/apache-arrow-pandas-internals/">here</a>.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
-<li id="fn2"><p><a href="https://blog.djnavarro.net/posts/2022-03-04_data-types-in-arrow-and-r/#character-types">This blog post by Danielle Navarro</a> provides an accessible explanation of the Arrow string data type.<a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn1"><p>Wes McKinney describes the rationale well <span><a href="https://wesmckinney.com/blog/apache-arrow-pandas-internals/">here</a>.</span> <a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn2"><p><span><a href="https://blog.djnavarro.net/posts/2022-03-04_data-types-in-arrow-and-r/#character-types">This blog post by Danielle Navarro</a> provides an accessible explanation of the Arrow string data type.</span> <a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 <li id="fn3"><p>See <a href="appendix.html#sec-arrow-types" class="quarto-xref">Appendix&nbsp;<span>A.2.2</span></a> for full list of types and how they map to R types.<a href="#fnref3" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section>
